# coding_challenges

./: .gitmodules
ccwc/: Makefile
ccwc/inc/: ccwc.h
ccwc/src/: ccwc.c
hcomp/: Makefile
hcomp/inc/: parse.h
hcomp/src/: hcomp.c  parse.c
hcomp/test/: Makefile
hcomp/test/src/: hcompTest.cpp  main.cpp
netcat/: CMakeLists.txt
netcat/inc/: parse_args.h
netcat/src/: main.c  parse_args.c
netcat/test/: test_parse_args.c
ntp/: CMakeLists.txt
ntp/inc/: ntp.h
ntp/src/: CMakeLists.txt  ntp.c
